# projekt_pi_2024

./: CMakeLists.txt  README.md
assets/shaders/: outline.frag  shallow.frag
headers/: Animation.h  InventoryManager.hpp  ObjectManager.hpp  animation.hpp  audio.hpp  character.hpp  definitions.hpp  engine.hpp  game.hpp  gameobject.hpp  inputhandler.hpp  inventory.hpp  item.hpp  pausemenu.hpp  perlinnoise.hpp  player.hpp  startmenu.hpp  tile.hpp  worldgen.hpp
src/: Animation.cpp  animation.cpp  audio.cpp  character.cpp  draw.cpp  engine.cpp  game.cpp  gameobject.cpp  input.cpp  inputhandler.cpp  inventory.cpp  main.cpp  perlinnoise.cpp  player.cpp  worldgen.cpp
